// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component Should concat classname in props with Bulma classname 1`] = `
<table
  className="table other-class this-is-a-test is-fullwidth is-striped"
  style={Object {}}
>
  <p>
    Default
  </p>
</table>
`;

exports[`Table component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": undefined,
    "bordered": false,
    "children": null,
    "className": "",
    "clearfix": undefined,
    "clipped": undefined,
    "hidden": undefined,
    "invisible": undefined,
    "italic": undefined,
    "marginless": undefined,
    "overlay": undefined,
    "paddingless": undefined,
    "pull": undefined,
    "radiusless": undefined,
    "responsive": undefined,
    "shadowless": undefined,
    "size": "fullwidth",
    "striped": true,
    "style": Object {},
    "textAlignment": undefined,
    "textColor": undefined,
    "textSize": undefined,
    "textTransform": undefined,
    "textWeight": undefined,
    "unselectable": undefined,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "bordered": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "size": [Function],
    "striped": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Table component Should have table classname 1`] = `
<table
  className="table is-fullwidth is-striped"
  style={Object {}}
>
  Test
   
  <a
    href="test"
  >
    Give me
  </a>
</table>
`;

exports[`Table component Should use inline styles 1`] = `
<table
  className="table is-fullwidth is-striped"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</table>
`;
